# blockme

./: .gitignore  README.md
backend/: .env.example  README.md  SESSION_HANDOUT.md  enhance_skill.py  generate_skill.py  pyproject.toml  pytest.ini  run_pipeline.py  session_handout.md  stage1_extract_pdf.py  stage2_classify_content.py  stage3_chunk_content.py  stage4_enhance_chunks.py  stage5_generate_skill.py  test_glm_api.py  test_thinking_mode.py
backend/app/: __init__.py
backend/app/document_processor/: README.md  __init__.py  content_classifier.py  dynamic_classifier.py  enhancement_prompts.py  enhancement_validator.py  gemini_smart_processor.py  glm_claude_processor.py  llm_cli_providers.py  markdown_optimizer.py  pdf_extractor.py  pipeline_manager.py  quality_validator.py  skill_enhancer.py  skill_generator.py
backend/cache/: README.md  chunking_e600c619ce6adbe8.json  classification_e600c619ce6adbe8.json  extraction_e600c619ce6adbe8.json
backend/cache/enhanced_chunks_e600c619ce6adbe8/: chunk-001.json  chunk-002.json  chunk-003.json  chunk-004.json  chunk-005.json  chunk-006.json  chunk-007.json  chunk-008.json  chunk-009.json  chunk-010.json  chunk-011.json  chunk-012.json  chunk-013.json  chunk-014.json  chunk-015.json  chunk-016.json  chunk-017.json  chunk-018.json  chunk-019.json  chunk-020.json  chunk-021.json  chunk-022.json  chunk-023.json  chunk-024.json  chunk-025.json  chunk-026.json  chunk-027.json  chunk-028.json  chunk-029.json  chunk-030.json  chunk-031.json  chunk-032.json  chunk-033.json  chunk-034.json  chunk-035.json  chunk-036.json  chunk-037.json  chunk-038.json  chunk-039.json  chunk-040.json  (+44 more)
backend/docs/: PIPELINE_ARCHITECTURE.md  SKILL_ENHANCEMENT.md
backend/tests/: README.md  __init__.py  test_api_connections.py  test_dependencies.py  test_document_processing.py
docs/: CHANGELOG.md  README.md  (+1 more)
mvp/: .env.example  .gitignore  README.md  chat_service.py  main.py  ocr_test.py  pdf_text_extractor.py  pymupdf_test.py  pyproject.toml  skill_loader.py  skill_router.py  skill_router_glm.py  t4012_test_result.json  test_mvp.py  test_mvp_glm.py  test_pdf_extraction.py  test_real_pdf.py  test_results.md  test_results_glm.md
mvp/output/: t4012-24e_extracted_20251103_165015.txt  t4012-24e_summary_20251103_165015.json
mvp/skills/: canada-gst.md  saskatchewan-pst.md  tax-filing-basics.md
(+154 files in other folders)
