[project]
name = "blockme-mvp"
version = "0.1.0"
description = "MVP: 验证 Skill 路由 + LLM 回答流程"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "zhipuai>=2.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
